--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="shortcut icon" href="logo.svg" type="image/x-icon">
+<link href="https://mastodon.social/@hahnavi" rel="me">
 <style>
   body {
     background-color: #070707;
